no commit message

--- a/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
+++ b/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
@@ -143,8 +143,8 @@ PRETTIER.getFileInfo[.sync]
 
 
 --parser STR|MODULE               #Can be:
-                                  #  - 'babel' (def)
-                                  #  - 'typescript'
+                                  #  - 'babel' (def) (@babel/parser)
+                                  #  - 'typescript' (@typescript-eslint/typescript-estree)
                                   #  - '[babel-]flow'
                                   #     - "babel-flow" parsed ambiguous syntax as JavaScript, "flow" as Flow
                                   #  - 'json'
