no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -611,17 +611,32 @@ transform-typescript              #Transpile TypeScript:
                                   #  - strip TYPEs
                                   #  - non-const ENUM
                                   #  - CLASS-specific features
+                                  #  - NAMESPACE:
+                                  #     - only if PLUGIN_OPTS.allowNamespaces true (def: false)
+                                  #     - including NAMESPACE merging
                                   #But no:
-                                  #  - type checking (use tsc for this)
-                                  #  - export = VAL nor import VAL = require()
+                                  #  - type checking (should use tsc before)
+                                  #  - tsc CONF options (should not be needed)
+                                  #  - export = VAL nor import VAL = require() (CommonJS default export)
                                   #  (implies --isolatedModules, so:)
                                   #  - const ENUM
-                                  #  - NAMESPACE
-                                  #  - re-exporting a TYPE
-                                  #  - without --importHelpers, inline helpers in each file instead of shared
+                                  #  - exporting an imported TYPE
+                                  #     - reason: Babel works file-wise so does not know an imported TYPE is a TYPE
+                                  #     - however the following work:
+                                  #        - importing a TYPE and using it without exporting it
+                                  #        - exporting a non-imported TYPE
+                                  #     - i.e. workaround: re-declaring imported TYPE before exporting it
+                                  #        import { T as T_ } from './types.ts'
+                                  #        export type T = T_
                                   #PLUGIN_OPTS:
                                   #  - isTSX BOOL (def: if *.tsx)
                                   #  - jsxPragma STR (def: 'React'): like tsc --jsxFactory
+                                  #Should be before other transforms.
+                                  #Only on *.ts[x]
+@babel/preset-typescript          #Includes only @babel/plugin-transform-typescript
+                                  #Same PLUGIN_OPTS:
+                                  #  - also allExtensions BOOL (def: false): whether to ignore PLUGIN_OPTS.isTSX
+                                  #  - no allowNamespaces
 
 JSX ==>                           #See JSX doc
 
