--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -855,7 +855,7 @@ NAMESPACE MERGING ==>             #If NAMESPACE declared several times, merge ex
 NAMESPACE MERGING OTHERS ==>      #If another declaration|TYPE (not implementation) has same name, merge it:
                                   #  - i.e. can access NAMESPACE.* with VAR.*
                                   #Both|neither must use export
-                                  #For CLASS, NAMESPACE must de declared after.
+                                  #For CLASS or with Babel, NAMESPACE must de declared after.
 
 
                                              /=+===============================+=\
