no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1684,7 +1684,7 @@ import/no-unused-modules [OBJ]   ##Avoid exports that are not imported anywhere 
                                  ##Also report modules with no exports (if OBJ.missingExports true)
                                  ##OBJ:
                                  ##  - src 'PATH'_ARR (def: process.cwd()): to include
-                                 ##  - ignoreExports 'PATH'_ARR: to exclude (always excluded: PACKAGE.main|browser|bin)
+                                 ##  - ignoreExports 'PATH'_ARR: to exclude (always excluded: PACKAGE.main|browser|bin, but does not perfectly work)
 import/named                     ##Avoid import { VAR } from 'PATH', if PATH does not export VAR
 import/default                   ##Avoid import VAR from 'PATH', if PATH does not export default VAR
 import/namespace [OBJ]           ##Avoid import * as OBJ2 from 'PATH', then using OBJ2.VAR, if PATH does not export VAR
