no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1884,6 +1884,7 @@ RIMRAF(DIR|FILE[, FUNC()])                     ##Same
 mkdir(PATH[, MODE_INT|OPTS], FUNC(ERROR))    10*#OPTS:
                                                 #  - mode MODE_INT (def: 0777) (see above for Windows behavior)
                                              10*#  - recursive BOOL (def: false)
+                                             10*#    See make-dir (see its doc) for a ponyfill
 FS-EXTRA.ensureFile|Dir(FILE|DIR,FUNC(ERROR))  ##Create file|dir, including parent dirs, if not existing.
 FS-EXTRA.mkdirs(DIR, FUNC(ERROR))              ##Like ensureDir()
 WRENCH.mkdirSyncRecursive(DIR[, MODE_INT])
