no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -864,7 +864,10 @@ declare ... enum ...              #     - except with literal STR|NUM|BOOL|BIGNU
 declare ... class ...             #  - FUNC: no body
 declare namespace ...             #  - enum|class|namespace: only TYPE not value
 declare type ...                  #  - type|interface: noop
-declare interface ...             #Useful when TYPE declaration is in TypeScript and implementation in JavaScript.
+declare interface ...             #Goal:
+                                  #  - when packaged 'MODULE' is in JavaScript
+                                  #     - even if it was transpiled from TypeScript
+                                  #  - but we want to export TYPEs to consumers
 
 export declare ...                #ESM `export` must be before `declare`
 
