no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -103,13 +103,13 @@ EXPR_STATEMENT                    #Child of STATEMENT, type 'ExpressionStatement
                              (bl)##  - extra.parenthesized BOOL
                              (bl)##  - extra.parenStart NUM
 
-#!/bin/bash                   (b)##On PROGRAM:
-                              (b)##  - interpreter INTERPRETER_DIRECTIVE
-                              (b)##Type 'InterpreterDirective'
-                              (b)##  - value STR
-'use strict'                      #Child of EXPR_STATEMENT:
-                                  #  - directive STR
-                                  #  - expression LITERAL
+#!/bin/bash                  (bl)##On PROGRAM:
+                             (bl)##  - interpreter INTERPRETER_DIRECTIVE
+                             (bl)##Type 'InterpreterDirective'
+                             (bl)##  - value STR
+'use strict'                     b#Child of EXPR_STATEMENT:
+                                 b#  - directive STR
+                                 b#  - expression LITERAL
                               (b)##On PROGRAM|BLOCK_STATEMENT:
                               (b)##  - directives DIRECTIVE_ARR
                               (b)##Type 'Directive':
@@ -122,18 +122,18 @@ EXPR_STATEMENT                    #Child of STATEMENT, type 'ExpressionStatement
 {...}                             #Child of STATEMENT, type 'BlockStatement':
                                   #  - body STATEMENT_ARR
 
-// COMMENT                    amb##On PROGRAM:
-/* COMMENT */                 amb##  - comments COMMENT_ARR
-                              amb##COMMENT:
-                              amb##  - type 'Line|Block'
-                              amb##  - value STR
-                              (b)##On FILE:
-                              (b)##  - comments COMMENT_ARR
-                              (b)##On NODE:
-                              (b)##  - [leadingComment|trailingComments|innerComments COMMENT_ARR]
-                              (b)##COMMENT:
-                              (b)##  - type 'CommentLine|Block'
-                              (b)##  - value STR
+// COMMENT                   ambl##On PROGRAM:
+/* COMMENT */                ambl##  - comments COMMENT_ARR
+                             ambl##COMMENT:
+                             ambl##  - type 'Line|Block'
+                             ambl##  - value STR
+                             (bl)##On FILE:
+                             (bl)##  - comments COMMENT_ARR
+                             (bl)##On NODE:
+                             (bl)##  - [leadingComment|trailingComments|innerComments COMMENT_ARR]
+                             (bl)##COMMENT:
+                             (bl)##  - type 'CommentLine|Block'
+                             (bl)##  - value STR
 
 
                                              /=+===============================+=\
@@ -162,10 +162,10 @@ OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
                               set|#    or PRIVATE_NAME (#VAR)
                                   #  - computed true (VAL) or false (VAR)
-OBJ?.VAR                   seatmb|#On MEMBER_EXPRESSION:
-OBJ?.[VAL]                 seatmb|#  - optional BOOL
-                              (b)##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
-                              (b)##  - optional BOOL
+OBJ?.VAR                  seatmbl|#On MEMBER_EXPRESSION:
+OBJ?.[VAL]                seatmbl|#  - optional BOOL
+                             (bl)##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
+                             (bl)##  - optional BOOL
 
 {VAR, ...}                        #Child of PATTERN, type 'ObjectPattern' (deconstruction):
 {...OBJ, ...}                     #  - properties ARR of either:
@@ -220,26 +220,26 @@ await VAL                         #Child of EXPRT, type 'AwaitExpression':
 FUNC(...)                         #Child of EXPR, type 'CallExpression':
                                   #  - callee EXPR|SUPER|IMPORT (FUNC)
                                   #  - arguments ARR of EXPR|SPREAD_ELEMENT
-                              (b)*#    or ARGUMENT_PLACEHOLDER
-                           seatmb|#  - optional BOOL (FUNC?.(...))
-                              (b)##Child of CALL_EXPRESSION, type 'OptionalCallExpression'
-                              (b)##  - optional BOOL (FUNC?.(...))
+                             (bl)*#    or ARGUMENT_PLACEHOLDER
+                          seatmbl|#  - optional BOOL (FUNC?.(...))
+                             (bl)##Child of CALL_EXPRESSION, type 'OptionalCallExpression'
+                             (bl)##  - optional BOOL (FUNC?.(...))
 new FUNC(...)                     #Child of EXPR, type 'NewExpression':
                                   #  - callee EXPR (FUNC)
                                   #  - arguments EXPR|SPREAD_ELEMENT_ARR
 
 @DECORATOR                     sae#On CLASS|METHOD_DEFINITION or
-                            seatmb#PROPERTY or
+                           seatmbl#PROPERTY or
                               sae##FIELD_DEFINITION:
                                sae#  - decorators DECORATOR_ARR
                                sae#Type 'Decorator':
                                sae#  - expression EXPR
 
-[VAL]::VAL2                   (b)*#Child of EXPR, type 'BindExpression':
-                              (b)*#  - [object EXPR] (VAL)
-                              (b)*#  - [callee EXPR] (VAL2)
+[VAL]::VAL2                  (bl)*#Child of EXPR, type 'BindExpression':
+                             (bl)*#  - [object EXPR] (VAL)
+                             (bl)*#  - [callee EXPR] (VAL2)
 
-?                             (b)*#Type 'ArgumentPlaceholder'
+?                            (bl)*#Type 'ArgumentPlaceholder'
 
 
 
@@ -300,8 +300,8 @@ LABEL: ...                        #Child of STATEMENT, type 'LabeledStatement':
                                   #  - label IDENTIFIER
                                   #  - body STATEMENT
 
-do {...}                      (b)*#Child of EXPRESSION, type 'DoExpression':
-                              (b)*#  - body STATEMENT
+do {...}                     (bl)*#Child of EXPRESSION, type 'DoExpression':
+                             (bl)*#  - body STATEMENT
 
 
                                              /=+===============================+=\
@@ -338,8 +338,8 @@ STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
                                  b#  - regex:
                                  b#     - pattern STR
                                  b#     - flags STR
-                              seb|#  (BIGINT only)
-                              seb|#  - bigint STR (without 'n')
+                             sebl|#  (BIGINT only)
+                             sebl|#  - bigint STR (without 'n')
                               (b)##Type 'String|Boolean|Numeric|Null|RegExpLiteral':
                               (b)##  - value STR|BOOL|NUM|null|REGEXP|BIGINT
                               (b)##  (not BOOL|null)
@@ -394,7 +394,7 @@ TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression
 !VAL
 ~VAL                              #Child of EXPR, type 'UnaryExpression':
 typeof VAL                        #  - operator '-|+|!|~|typeof|void|delete'
-throw VAL                     (b)*#    or 'throw'
+throw VAL                    (bl)*#    or 'throw'
 void VAL                          #  - prefix BOOL (always true)
 delete VAL                        #  - argument EXPR
 
@@ -402,24 +402,24 @@ delete VAL                        #  - argument EXPR
 VAR++                             #  - operator '--|++'
 --VAR                             #  - prefix BOOL
 VAR--                             #  - argument EXPR
-                             aemb|#    or PATTERN
+                            aembl|#    or PATTERN
 
 VAL == != === !== < <= > >= <<    #Child of EXPR, type 'BinaryExpression':
 >> >>> + - * / % ** | ^ & in      #  - operator '==|!=|===|!==|<|<=|>|>=|<<|>>|>>>|+|-|*|/|%|**|||^|&|in|instanceof'
 instanceof VAL2                   #
-VAL |> VAL2                   (b)*#    or '|>'
+VAL |> VAL2                  (bl)*#    or '|>'
                                   #  - left EXPR
                                   #  - right EXPR
 
 VAR = += -= *= /= **= %= <<= >>=  #Child of EXPR, type 'AssignmentExpression':
 >>>= |= ^= &= VAL                 #  - operator '=|+=|-=|*=|/=|**=|%=|<<=|>>=|>>>=||=|^=|&='
-VAR &&= ||= ??= VAL           (b)*#    or '&&=|||=|??='
+VAR &&= ||= ??= VAL          (bl)*#    or '&&=|||=|??='
                                   #  - left PATTERN or (only on older JavaScript engines) EXPR
                                   #  - right EXPR
 
 VAL || && VAL2                    #Child of EXPR, type 'LogicalExpression':
                                   #  - operator '|||&&'
-VAL ?? VAL2                   (b)*#   or '??'
+VAL ?? VAL2                  (bl)*#   or '??'
                                   #  - left EXPR
                                   #  - right EXPR
 
@@ -456,15 +456,15 @@ class [CLASS] [extends PARENT] {  #Type 'Class':
                               (b)##Type 'ClassMethod' like METHOD_DEFINITION but:
                               (b)##  - child of FUNCTION_DECLARATION
                               (b)##  - no value
-  [static] VAR [= VAL]       setb|#Type 'FieldDefinition'
-                             (tb)##or 'ClassProperty':
+  [static] VAR [= VAL]      setbl|#Type 'FieldDefinition'
+                            (tbl)##or 'ClassProperty':
                                se|#  - key EXPR|PRIVATE_NAME
                                se|#  - [value EXPR]
                                se|#  - static BOOL
                                se|#  - computed BOOL
   #VAR|#FUNC()                set|#Type 'PrivateName':
-                             setb|#  - name STR
-                              (b)##  - id IDENTIFIER
+                            setbl|#  - name STR
+                             (bl)##  - id IDENTIFIER
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
@@ -472,7 +472,7 @@ new.target                        #Child of EXPR, type 'MetaProperty':
                                   #  - meta IDENTIFIER
                                   #  - property IDENTIFIER
 import.meta                    sem#Same
-function.sent                 (b)*#Same
+function.sent                (bl)*#Same
 
 this                              #Child of EXPR, type 'ThisExpression'
 
@@ -508,11 +508,11 @@ export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefa
 export * from "MDL"               #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
 
-export * as VAR from "MDL"  (amb)*#Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
-                            (amb)*#  - no local
+export * as VAR from "MDL" (ambl)*#Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
+                           (ambl)*#  - no local
                               (m)##  - exported -> specifier
-export VAL from "MDL"         (b)*#Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
-                              (b)*#  - no local
+export VAL from "MDL"        (bl)*#Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
+                             (bl)*#  - no local
 
 import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDeclaration':
                                   #  - specifiers MODULE_SPECIFIER_ARR
@@ -527,6 +527,6 @@ import * as VAR                   #Child of MODULE_SPECIFIER, type 'ImportNamesp
 import "MDL"                      #
 import {}                         #Those have empty ARR as specifiers
 
-import("MDL")               seatb|#Child of EXPR, type 'ImportExpression':
-                            seatb|#  - source EXPR
-                            (atb)##Treated as a CALL_EXPRESSION
+import("MDL")              seatbl|#Child of EXPR, type 'ImportExpression':
+                           seatbl|#  - source EXPR
+                           (atbl)##Treated as a CALL_EXPRESSION
