--- a/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
@@ -204,12 +204,12 @@ class CLASS {}
                                   #  - [accessibility 'public|protected|private']
 abstract class ...                #On CLASS_DECLARATION:
                                   #  - [abstract BOOL]
-  abstract VAR                   b#Type 'TSAbstractClassProperty' (like CLASS_PROPERTY)
-                              (b)##On CLASS_PROPERTY:
-                              (b)##  - [abstract BOOL]
-  abstract FUNC()                b#Type 'TSAbstractMethodDefinition' (like METHOD_DEFINITION)
-                              (b)##On CLASS_METHOD|TS_DECLARE_METHOD:
-                              (b)##  - [abstract BOOL]
+  abstract VAR                  bl#Type 'TSAbstractClassProperty' (like CLASS_PROPERTY)
+                             (bl)##On CLASS_PROPERTY:
+                             (bl)##  - [abstract BOOL]
+  abstract FUNC()               bl#Type 'TSAbstractMethodDefinition' (like METHOD_DEFINITION)
+                             (bl)##On CLASS_METHOD|TS_DECLARE_METHOD:
+                             (bl)##  - [abstract BOOL]
 
 interface INTERFACE {}            #Child of DECLARATION, type 'TSInterfaceDeclaration':
                                   #  - id IDENTIFIER
@@ -218,14 +218,14 @@ interface INTERFACE {}            #Child of DECLARATION, type 'TSInterfaceDeclar
 
 extends PARENT                    #On INTERFACE:
                                   #  - extends TS_INTERFACE_HERITAGE_ARR
-                                 b#Type 'TSInterfaceHeritage'
-                              (b)##Type 'TSExpressionWithTypeArguments'
+                                bl#Type 'TSInterfaceHeritage'
+                             (bl)##Type 'TSExpressionWithTypeArguments'
                                   #Child of TS_TYPE:
                                   #  - expression EXPR
 implements PARENT                 #On CLASS:
                                   #  - implements TS_CLASS_IMPLEMENT_ARR
-                                 b#Type 'TSClassImplements'
-                              (b)##Type 'TSExpressionWithTypeArguments'
+                                bl#Type 'TSClassImplements'
+                             (bl)##Type 'TSExpressionWithTypeArguments'
                                   #Child of TS_TYPE:
                                   #  - expression EXPR
 
@@ -240,25 +240,25 @@ implements PARENT                 #On CLASS:
 ([...]VAR[?]: TYPE,...) => TYPE2  #Child of TS_TYPE, type 'TSFunctionType':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                              (b)##params -> parameters, returnType -> typeAnnotation
+                             (bl)##params -> parameters, returnType -> typeAnnotation
 new (...) => TYPE2                #Child of TS_TYPE, type 'TSConstructorType':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                              (b)##params -> parameters, returnType -> typeAnnotation
+                             (bl)##params -> parameters, returnType -> typeAnnotation
 { FUNC(...)[: TYPE2] }            #Type 'TSMethodSignature':
                                   #  - key EXPR
                                   #  - [computed BOOL] (when key is [STR])
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                              (b)##params -> parameters, returnType -> typeAnnotation
+                             (bl)##params -> parameters, returnType -> typeAnnotation
 { (...)[: TYPE2], ... }           #Type 'TSCallSignatureDeclaration':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                              (b)##params -> parameters, returnType -> typeAnnotation
+                             (bl)##params -> parameters, returnType -> typeAnnotation
 { new (...)[: TYPE2] }            #Type 'TSConstructSignatureDeclaration':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                              (b)##params -> parameters, returnType -> typeAnnotation
+                             (bl)##params -> parameters, returnType -> typeAnnotation
 
 this                              #Child of TS_TYPE, type 'TSThisType'
                                   #When used as return value type
@@ -313,8 +313,8 @@ function <T,...>(...) {...}       #TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DE
 declare function <T,...>(...)     #     - params TS_TYPE_PARAMETER_ARR
 
  T [extends TYPE3][ = TYPE4]      #Type 'TSTypeParameter':
- T in TYPE3                      b#  - [name IDENTIFIER]
-                              (b)##  - [name STR]
+ T in TYPE3                     bl#  - [name IDENTIFIER]
+                             (bl)##  - [name STR]
                                   #  - [constraint TYPE3]
                                   #  - [default TYPE4]
 
@@ -403,8 +403,8 @@ declare global ...                #  - [declare BOOL]
 
 declare [async] function FUNC()   #Child of DECLARATION, type 'TSDeclareFunction'. Like FUNCTION_DECLARATION except no body
 
-class ... { FUNC() }             b#METHOD_DEFINITION with no body
-                              (b)##Type 'TSDeclareMethod'. Like CLASS_METHOD except no body
+class ... { FUNC() }            bl#METHOD_DEFINITION with no body
+                             (bl)##Type 'TSDeclareMethod'. Like CLASS_METHOD except no body
 
 
                                              /=+===============================+=\
