no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -524,7 +524,11 @@ POLICY                                       11*#JSON file
                                              11*#  - does not own file (i.e. cannot do chmod)
 POLICY.resources.PATH|URL                    11*#POLICYFILE
 POLICYFILE.integrity                         11*#STR: 'sha256|384|512' followed by 'HASH'
+                                             12*#Can also be true to bypass (during local development)
 --policy-integrity=STR                       12*#Same as CLI, i.e. works even if POLICY file was tampered with.
+POLICYFILE.dependencies                      12*#OBJ.MODULE to configure module resolution during policy check. Either:
+                                             12*#  - 'PATH': make resolving 'MODULE' resolve 'PATH' instead
+                                             12*#  - true: use normal resolution
 POLICY.onerror                               11*#What do on integrity failures:
                                              11*#  - 'throw' (def): throw ERROR
                                              11*#  - 'exit': print ERROR + process.exit(1)
@@ -675,6 +679,7 @@ ISTREAM.unpipe([OSTREAM])                       #Stops pipe() (def: all)
 ISTREAM.unshift(SVAL[, 'ENCODING'])             #Put last SVAL read back in ISTREAM
                                              12*#Can specify 'ENCODING'
 ISTREAM.destroy([ERROR])                        #
+ISTREAM.destroyed                               #BOOL
 
 Readable.from(SVAL_ITERABLE[, OBJ])->ISTREAM 12*#OBJ:
                                                 #  - same as new Readable(OBJ)
@@ -694,6 +699,7 @@ OSTREAM.write(SVAL[, 'ENCODING'[,FUNC()]])->BOOL#Writes chunks.
 OSTREAM.end(SVAL[, 'ENCODING'[, FUNC()]])
  ->OSTREAM                                      #Same but for final chunk. FUNC is the finish event handler
 OSTREAM.destroy([ERROR])                        #
+OSTREAM.destroyed                               #BOOL
 OSTREAM.setDefaultEncoding('ENCODING')->OSTREAM #Def: 'utf-8'. Used by write() and end()
 OSTREAM.writable                                #BOOL
 OSTREAM.writableObjectMode                   12*#BOOL
@@ -1392,8 +1398,7 @@ REQ.rawHeaders                                  #As [ 'VAR', 'VAL', ... ]. Not n
 REQ.[raw]trailers                               #Same for trailer headers
 REQ.statusCode|Message                          #Only for CLIENTREQ's REQ
 REQ.socket                                      #TCPSOCKET
-REQ.flush()                                     #Send the headers right away, instead of trying to send in same TCP packet
-                                                #as body.
+REQ.flushHeaders()                              #Send the headers right away, instead of trying to send in same TCP packet as body.
                                                 #Useful if headers are given quickly but body retrieval takes time.
 REQ.on('aborted', FUNC())                       #Aborted by client
 REQ.aborted                                   8*#BOOL
@@ -2705,10 +2710,13 @@ setEngine(PATH[, NUM])                          #When using custom OpenSSL or al
 --openssl-config=FILE
 OPENSSL_CONF=FILE ENVVAR                        #
 
-createHash(STR)                                 #Returns a HASH, i.e. a IOSTREAM generator: write|read to it to get hashes.
+createHash(STR[, OPTS])                         #Returns a HASH, i.e. a IOSTREAM generator: write|read to it to get hashes.
                                                 #STR is the algo.
                                                 #CRYPTO.getHashes() gives list of supported hashes algos, as STR_ARR:
                                                 #includes [EC]DSA, DSS1, MD4|5, RIPEMD, RMD, SHA1|224|256|384|512, Whirlpool
+                                                #OPTS:
+                                                #  - same as STREAM.Transform(OPTS)
+                                             12*#  - outputLength NUM (in bytes)
 createHmac(STR, STDBUFFER|KEY)                  #Same but for a HMAC. STR is hash algo. Second argument is the key.
 createCipheriv(STR, STDBUFFER|KEY,STDBUFFER|null#Same but for a CIPHER (sym. cipher).
  [, OPTS])                                      #Key must be KEY|TDBUFFER or STR with encoding "binary".
@@ -2843,7 +2851,8 @@ scrypt[Sync](STDBUFFER, STDBUFFER2, NUM      10*#Generate a derived key BUFFER u
                                              10*#  - cost|N NUM (def: 16384): CPU/memory cost. Must be power of 2
                                              10*#  - blockSize|r NUM (def: 8): block size
                                              10*#  - parallelization|p NUM (def: 1): parallelization
-                                             10*#  - maxmem NUM (def: 32MB): memory bound. Must be > 128*N*r
+                                             10*#  - maxmem NUM (def: 32MB): memory bound.
+                                            <12*#    Must be > 128*N*r
 
 randomBytes(NUM[, FUNC(ERROR, BUFFER)])         #Generates random BUFFER of length NUM
                                                 #Is cryptographically secure (e.g. from /dev/random)
@@ -3184,6 +3193,7 @@ process.report.getReport([ERROR])->OBJ       11*#Get debugging information.
                                              11*#     - release: process.release
                                              11*#     - host: os.hostname()
                                              11*#     - cpus: os.cpus()
+                                             12*#     - networkInterfaces: os.networkInterfaces() (except as an OBJ_ARR)
                                              11*#     - cwd process.cwd()
                                              11*#     - osName STR (e.g. 'Linux')
                                              11*#     - osRelease STR (e.g. '4.18.0-16-generic')
@@ -3317,6 +3327,11 @@ getHeapSpaceStatistics()->OBJ                   #OBJ:
                                                 #  - space_name STR
                                                 #  - space_[used|available_]size NUM
                                                 #  - physical_space_size NUM
+getHeapCodeStatistics()->OBJ                 12*#OBJ:
+                                             12*#  - code_and_metadata_size NUM
+                                             12*#  - bytecode_and_metadata_size NUM
+                                             12*#  - external_script_source_size NUM
+
 setFlagsFromString('--OPT ...')                 #Additional v8 CLI options
 
 serialize(VAL)->BUFFER
