no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1943,7 +1943,8 @@ export { VAR[ as VAR2], ... }                *-|#Specific VAR ("named export")
 export { VAR as default, ... }
 export default VAL                           *-|#Default VAR ("default export"). Is just a named export called "default".
 export {}                                    *-|#Do not export anything (i.e. not an empty object)
-export ... from "MDL"                        *-|#Same as import ... from "MDL", then multiple export
+export {} from "MDL"
+export {...} from "MDL"                      *-|#Same as import ... from "MDL", then multiple export
 
 import { VAR[ as VAR2], ... } from "MDL"     *-|#Specific VAR
 import * as VAR2 from "MDL"                  *-|#All VARs, including "default"
